--- a/src/pages/layout/Header/Header.less
+++ b/src/pages/layout/Header/Header.less
@@ -19,6 +19,15 @@
         border-top:1px solid #52c41a;
         .breadcrumb-title {
             text-align: center;
+            &::after{
+               position: absolute;
+               content: '';
+               top:39px;
+               left: 84px;
+               border-top: 9px solid #52c41a;
+               border-left: 12px solid transparent;
+               border-right: 12px solid transparent;
+            }
         }
         .breadcrumb-weather {
             text-align: right;
