--- a/src/pages/layout/Header/Header.less
+++ b/src/pages/layout/Header/Header.less
@@ -18,16 +18,16 @@
         padding: 0 50px;
         border-top:1px solid #52c41a;
         .breadcrumb-title {
-            text-align: center;
-            &::after{
-               position: absolute;
-               content: '';
-               top:39px;
-               left: 84px;
-               border-top: 9px solid #52c41a;
-               border-left: 12px solid transparent;
-               border-right: 12px solid transparent;
-            }
+            text-align: left;
+            // &::after{
+            //    position: absolute;
+            //    content: '';
+            //    top:39px;
+            //    left: 84px;
+            //    border-top: 9px solid #52c41a;
+            //    border-left: 12px solid transparent;
+            //    border-right: 12px solid transparent;
+            // }
         }
         .breadcrumb-weather {
             text-align: right;
