--- a/src/pages/ui/ui.less
+++ b/src/pages/ui/ui.less
@@ -4,3 +4,14 @@
         margin-right: 10px;
     }
 }
+.ant-carousel .slick-slide {
+    text-align: center;
+    height: 160px;
+    line-height: 160px;
+    background: #364d79;
+    overflow: hidden;
+  }
+  
+  .ant-carousel .slick-slide h3 {
+    color: #fff;
+  }
