order detail except map

--- a/src/pages/layout/Header/Header.less
+++ b/src/pages/layout/Header/Header.less
@@ -37,3 +37,17 @@
         }
     }
 }
+
+//common 页面
+.simple-page {
+    .header-top {
+        background: #1890ff;
+        color:#ffffff;
+        font-size: 20px;
+    }
+    .ant-form,
+    .ant-col-12,
+    .weather {
+        display: none;
+    }
+}
